# Termoardy

./: CMakeLists.txt  README.md
include/: board.h  game.h
src/: board.cpp  game.cpp  main.cpp
